--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +15,26 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
+        }
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), 
+                        rgba(255,255,255,0.08) 0%, 
+                        rgba(0,0,0,0.95) 200px, 
+                        black 400px);
+            pointer-events: none;
+            z-index: 9999;
         }
         .container {
             width: 100%;
             max-width: 800px;
             padding: 20px;
+            position: relative;
+            z-index: 1;
         }
         input, textarea {
             width: 100%;
@@ -57,7 +72,7 @@
             transition: 0.3s;
         }
         button:hover { background: #555; }
-        #status { text-align: center; margin-top: 20px; }
+        #status { text-align: center; margin-top: 20px; color: #0f0; }
 
         @keyframes slideDown {
             to { opacity: 1; transform: translateY(0); }
@@ -69,23 +84,28 @@
 </head>
 <body>
     <div class="container">
-        <h1>Başlık Yaz</h1>
+        <h1>Hello.</h1>
         <form id="contactForm">
-            <input type="text" id="name" placeholder="Adınız" required>
-            <input type="email" id="email" placeholder="E-posta" required>
-            <textarea id="message" placeholder="Mesajınız" rows="6" required></textarea>
-            <button type="submit">Gönder</button>
+            <input type="text" id="name" placeholder="Name" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <textarea id="message" placeholder="Message" rows="6" required></textarea>
+            <button type="submit">Send</button>
         </form>
         <div id="status"></div>
     </div>
 
     <script>
+        document.addEventListener('mousemove', e => {
+            document.body.style.setProperty('--x', e.clientX + 'px');
+            document.body.style.setProperty('--y', e.clientY + 'px');
+        });
+
         const form = document.getElementById('contactForm');
         const status = document.getElementById('status');
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
-            status.textContent = 'Gönderiliyor...';
+            status.textContent = 'Sending...';
 
             const data = {
                 name: document.getElementById('name').value,
@@ -94,20 +114,20 @@
             };
 
             try {
-                const response = await fetch('https://formspree.io/f/xgvdoody', {  // Burayı Formspree ID'n ile değiştir
+                const response = await fetch('https://formspree.io/f/xgvdoody', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data)
                 });
 
                 if (response.ok) {
-                    status.textContent = 'Mesajın gönderildi!';
+                    status.textContent = 'Message sent!';
                     form.reset();
                 } else {
-                    status.textContent = 'Hata oluştu.';
+                    status.textContent = 'Error.';
                 }
             } catch (err) {
-                status.textContent = 'Bağlantı hatası.';
+                status.textContent = 'Connection error.';
             }
         });
     </script>
